# free-meal-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  freemeal_sdk.py  freemeal_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  response.py  result.py  spec.py  utility_type.py
py/entity/: category_entity.py  filter_entity.py  latest_entity.py  list_entity.py  lookup_entity.py  random_entity.py  randomselection_entity.py  search_entity.py
py/feature/: audit_feature.py  base_feature.py  clienttrack_feature.py  netsim_feature.py  paging_feature.py  proxy_feature.py  ratelimit_feature.py  rbac_feature.py  streaming_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_category_direct.py  test_category_entity.py  test_exists.py  test_feature.py  test_filter_direct.py  test_filter_entity.py  test_latest_direct.py  test_latest_entity.py  test_list_direct.py  test_list_entity.py  test_lookup_direct.py  test_lookup_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_random_direct.py  test_random_entity.py  test_randomselection_direct.py  test_randomselection_entity.py  test_readme_examples.py  test_search_direct.py  test_search_entity.py
py/utility/: done.py  feature_add.py  feature_hook.py  fetcher.py  make_context.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_result.py  make_spec.py  make_url.py  param.py  prepare_auth.py  prepare_body.py  prepare_method.py  prepare_query.py  (+4 more)
(+568 files in other folders)
